# ecommerce-reporting-etl

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/PULL_REQUEST_TEMPLATE/: pr.yml
.github/workflows/: ci.yml
src/: main.py
src/exceptions/: __init__.py  base.py
src/extract/: __init__.py  base_extractor.py  csv_extractor.py
src/load/: __init__.py  base_loader.py  csv_loader.py  parquet_loader.py
src/pipeline/: __init__.py  extract.py  load.py  transform.py
src/transform/: __init__.py
src/transform/aggregators/: inventory_analytics.py  order_lifecycle.py  product_analytics.py  review_analytics.py
src/transform/cleaners/: base_cleaner.py  inventory_cleaner.py  orders_cleaner.py  reviews_cleaner.py
src/transform/enrichers/: orders_enricher.py  reviews_enricher.py
src/utils/: logger.py  validators.py
tests/: conftest.py  test_extract.py  test_load.py  test_transform.py
tests/extract/: test_base_extractor.py  test_csv_extractor.py
tests/load/: test_csv_loader.py  test_parquet_loader.py
tests/transform/aggregators/: test_sales_analytics.py
tests/transform/cleaners/: test_base_cleaner.py  test_inventory_cleaner.py  test_orders_cleaner.py  test_reviews_cleaner.py
tests/transform/enrichers/: test_inventory_enricher.py  test_orders_enricher.py  test_reviews_enricher.py
tests/utils/: test_validators.py
